bug fix - shrink search box on small screens

--- a/app/assets/stylesheets/navbar.css.less
+++ b/app/assets/stylesheets/navbar.css.less
@@ -259,6 +259,12 @@ header
       {
         &, &:focus, &:hover { width: 100%; }
       }
+      @media (max-width: 1050px) {
+        &{
+          width: 200px;
+          min-width: inherit;
+        }
+      }
     }   
   }
   &.navbar-visible
